--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/whytheplatypus/relay/issues"
   },
   "dependencies": {
-    "ws": "~0.4.30"
+    "ws": "~0.4.30",
+    "portfinder": "~0.2.1"
   }
 }
